<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:icon="@drawable/icon_shortcut" android:id="@+id/main_menu_shortcuts" android:title="@string/games" />
        <item android:icon="@drawable/icon_container" android:id="@+id/main_menu_containers" android:title="@string/containers" />
        <item android:icon="@drawable/icon_downloader" android:id="@+id/main_menu_contents" android:title="@string/downloader"/>
        <item android:icon="@drawable/icon_settings" android:id="@+id/main_menu_settings" android:title="@string/settings" />
        <item android:icon="@drawable/icon_duplicate" android:id="@+id/main_menu_store" android:title="@string/store"/>
        <item android:icon="@drawable/icon_about" android:id="@+id/main_menu_about" android:title="@string/more" />
    </group>
    <!-- Not a page: opens the tour list over whichever page is showing. -->
    <item android:icon="@drawable/icon_guided_tour" android:id="@+id/main_menu_guided_tour" android:title="@string/guided_tour" />
</menu>