<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/TVToApplyClose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to_apply_close"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorAccent"
        android:gravity="center"
        android:padding="8dp"
        android:visibility="gone" />

    <CheckBox
        android:id="@+id/CBUseXR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/use_xr"
        android:visibility="gone" />

    <CheckBox
        android:id="@+id/CBEnableImmersiveMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/xr_selector"
        android:text="@string/use_immersive_mode" />

    <CheckBox
        android:id="@+id/CBEnableSBS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/xr_selector"
        android:text="@string/use_sbs" />

    <CheckBox
        android:id="@+id/CBEnableCurvedScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/xr_selector"
        android:text="@string/use_curved_screen" />

    <CheckBox
        android:id="@+id/CBEnablePassthrough"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/xr_selector"
        android:text="@string/use_pt" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:padding="16dp"
        android:background="@color/colorPrimary"/>

    <CheckBox
        android:id="@+id/CBPlayerXRMouse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@drawable/xr_selector"
        android:text="@string/controller_as_mouse" />

    <CheckBox
        android:id="@+id/CBPlayerXRMouseLeftHanded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@drawable/xr_selector"
        android:text="@string/left_handed_mouse" />

    <CheckBox
        android:id="@+id/CBPlayerXRMouseLightgun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@drawable/xr_selector"
        android:text="@string/light_gun_mouse" />

    <Button
        android:id="@+id/BTControlsEditor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/controls_editor"
        android:layout_marginTop="8dp" />
</LinearLayout>