<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="500dp"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <EditText
            android:id="@+id/ETName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="text"
            android:imeOptions="actionDone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_a" />
        <Spinner
            style="@style/ComboBox"
            android:layout_width="match_parent"
            android:id="@+id/SButtonA"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:clickable="true"
            android:spinnerMode="dialog" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_b" />
        <Spinner
            style="@style/ComboBox"
            android:layout_width="match_parent"
            android:id="@+id/SButtonB"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:clickable="true"
            android:spinnerMode="dialog" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_x" />
        <Spinner
            style="@style/ComboBox"
            android:layout_width="match_parent"
            android:id="@+id/SButtonX"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:clickable="true"
            android:spinnerMode="dialog" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_y" />
        <Spinner
            style="@style/ComboBox"
            android:layout_width="match_parent"
            android:id="@+id/SButtonY"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:clickable="true"
            android:spinnerMode="dialog" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_grip" />
        <Spinner
            style="@style/ComboBox"
            android:layout_width="match_parent"
            android:id="@+id/SButtonGrip"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:clickable="true"
            android:spinnerMode="dialog" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_trigger" />
        <Spinner
            style="@style/ComboBox"
            android:layout_width="match_parent"
            android:id="@+id/SButtonTrigger"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:clickable="true"
            android:spinnerMode="dialog" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thumbstick_left" />
        <Spinner
            style="@style/ComboBox"
            android:layout_width="match_parent"
            android:id="@+id/SThumbstickLeft"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:clickable="true"
            android:spinnerMode="dialog" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thumbstick_right" />
        <Spinner
            style="@style/ComboBox"
            android:layout_width="match_parent"
            android:id="@+id/SThumbstickRight"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:clickable="true"
            android:spinnerMode="dialog" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thumbstick_up" />
        <Spinner
            style="@style/ComboBox"
            android:layout_width="match_parent"
            android:id="@+id/SThumbstickUp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:clickable="true"
            android:spinnerMode="dialog" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thumbstick_down" />
        <Spinner
            style="@style/ComboBox"
            android:layout_width="match_parent"
            android:id="@+id/SThumbstickDown"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:clickable="true"
            android:spinnerMode="dialog" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thumbstick_press" />
        <Spinner
            style="@style/ComboBox"
            android:layout_width="match_parent"
            android:id="@+id/SThumbstickPress"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:clickable="true"
            android:spinnerMode="dialog" />
    </LinearLayout>
</ScrollView>