<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/containers_menu_add"
        android:icon="@drawable/icon_action_bar_add"
        android:title="@string/add_container"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/containers_menu_import"
        android:icon="@drawable/icon_action_bar_import"
        android:title="@string/import_container"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/containers_menu_import_bundled"
        android:icon="@drawable/icon_action_bar_import"
        android:title="@string/import_bundled_container"
        app:showAsAction="never" />
</menu>
