<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <CheckBox
            android:id="@+id/CBPcvrRuntime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pcvr_runtime" />

        <CheckBox
            android:id="@+id/CBPcvrDirectTransport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pcvr_direct_transport" />

        <LinearLayout
            android:id="@+id/LLPcvrController"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pcvr_controller" />

            <Spinner
                style="@style/ComboBox"
                android:layout_width="match_parent"
                android:id="@+id/SPcvrController"
                android:entries="@array/pcvr_controller_entries" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LLPcvrRenderScale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pcvr_render_scale" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/TVPcvrRenderScale" />
            </LinearLayout>

            <!-- 20% to 100% in steps of 5: progress = (scale - 20) / 5 -->
            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/SBPcvrRenderScale"
                android:max="16" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
